Add tipping address.

--- a/index.html
+++ b/index.html
@@ -17,11 +17,23 @@
 			Drunken Dragon raffle rewards (epoch 294)
 		</h1>
 
-		<h2>Enter any of your wallets receive addresses</h1>
+		<h2>Enter any one of your wallets receive addresses</h1>
 		<div id="eka">
 			<input id="input" type="text"></input>
 			<button id="button">Check</button>
 		</div>
 		<div id="output"></div>
+		<hr />
+		<div id="goblin">
+			<h3>Greetings fellow adventurer!</h3>
+			<p>The goblin technician running this place gets thristy sometimes, if you are able, consider tipping some Ada to keep hes mug full.
+			</p>
+			<p>
+				Or if you have a spare Pixel Tile, he'd glady add to hes collection.
+			</p>
+			<p id="address">
+				addr1q8ellt2qak36tgxcs3xjg76gjl5hjg8a9vumr5kry7rfw7cwysu8mwcmdd289vf2adzq6fz38w229ftdw4x4ywnn36fq4drwq2
+			</p>
+		</div>
   </body>
 </html>
