--- a/index.html
+++ b/index.html
@@ -35,5 +35,8 @@
 				addr1q8ellt2qak36tgxcs3xjg76gjl5hjg8a9vumr5kry7rfw7cwysu8mwcmdd289vf2adzq6fz38w229ftdw4x4ywnn36fq4drwq2
 			</p>
 		</div>
+		<div>
+			<p>(Note: this is an independed site, visit official game site at <a href="https://www.drunkendragon.games/">drunkendragon.games</a>)</p>
+		</div>
   </body>
 </html>
