--- a/index.html
+++ b/index.html
@@ -29,11 +29,13 @@
 			<p>The goblin technician running this place gets thristy sometimes, if you are able, consider tipping some Ada to keep hes mug full.
 			</p>
 			<p>
-				Or if you have a spare Pixel Tile, he'd glady add to hes collection.
+				Or if you have a spare Pixel Tile, he'd gladly add to hes collection.
 			</p>
-			<p id="address">
-				addr1q8ellt2qak36tgxcs3xjg76gjl5hjg8a9vumr5kry7rfw7cwysu8mwcmdd289vf2adzq6fz38w229ftdw4x4ywnn36fq4drwq2
-			</p>
+			<div>
+				<p id="address">addr1q8ellt2qak36tgxcs3xjg76gjl5hjg8a9vumr5kry7rfw7cwysu8mwcmdd289vf2adzq6fz38w229ftdw4x4ywnn36fq4drwq2
+				</p>
+				<button id="copy">Copy address</button>
+			</div>
 		</div>
 		<div>
 			<p>(Note: this is an independed site, visit official game site at <a href="https://www.drunkendragon.games/">drunkendragon.games</a>)</p>
