--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 		<hr />
 		<div id="goblin">
 			<h3>Greetings fellow adventurer!</h3>
-			<p>The goblin technician running this place gets thristy sometimes, if you are able, consider tipping some Ada to keep hes mug full.
+			<p>The goblin technician running this place gets thristy sometimes, if you are able, consider tipping some Ada to keep his mug full.
 			</p>
 			<p>
-				Or if you have a spare Pixel Tile, he'd gladly add to hes collection.
+				Or if you have a spare Pixel Tile, he'd gladly add to his collection.
 			</p>
 			<div>
 				<p id="address">addr1q8ellt2qak36tgxcs3xjg76gjl5hjg8a9vumr5kry7rfw7cwysu8mwcmdd289vf2adzq6fz38w229ftdw4x4ywnn36fq4drwq2
